// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SendMsgForm render should render 1`] = `
<Dialog
  buttons={
    Object {
      "primary": Object {
        "name": "Ok",
        "onClick": [Function],
      },
      "secondary": Object {
        "name": "Cancel",
        "onClick": [Function],
      },
    }
  }
  headerClass="send_msg"
  tabs={
    Array [
      Object {
        "body": <React.Fragment>
          <p>
            Sending messages over a WhatsApp channel requires that a template be used if you have not received a message from a contact in the last 24 hours. Setting a template to use over WhatsApp is especially important for the first message in your flow.
          </p>
          <AssetSelector
            entry={
              Object {
                "value": null,
              }
            }
            formClearable={true}
            name="Template"
            noOptionsMessage="No templates found"
            onChange={[Function]}
            searchable={true}
            shouldExclude={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "WhatsApp",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Quick Replies are made into buttons for supported channels. For example, when asking a question, you might add a Quick Reply for "Yes" and one for "No".
          </p>
          <MultiChoiceInput
            entry={
              Object {
                "value": "",
              }
            }
            helpText={
              <Trans
                i18nKey="forms.send_msg.add_quick_reply"
              >
                Add a new Quick Reply and press enter.
              </Trans>
            }
            items={
              Object {
                "value": Array [],
              }
            }
            name="Quick Reply"
            onEntryChanged={[Function]}
            onFieldErrors={[Function]}
            onItemAdded={[Function]}
            onRemoved={[Function]}
          />
        </React.Fragment>,
        "checked": false,
        "hasErrors": false,
        "name": "Quick Replies",
      },
      Object {
        "body": <React.Fragment>
          <p>
            Add up to 3 attachments to each message. Each attachment can be a file you upload or a dynamic URL using expressions and variables from your Flow.
          </p>
          <div
            className="url_attachment"
          >
            <div
              className="type_choice"
            >
              <SelectElement
                entry={
                  Object {
                    "value": null,
                  }
                }
                name="Type Options"
                onChange={[Function]}
                options={
                  Array [
                    Object {
                      "label": "Image URL",
                      "value": "image",
                    },
                    Object {
                      "label": "Audio URL",
                      "value": "audio",
                    },
                    Object {
                      "label": "Video URL",
                      "value": "video",
                    },
                    Object {
                      "label": "Upload Attachment",
                      "value": "upload",
                    },
                  ]
                }
                placeholder="Add Attachment"
                styles={
                  Object {
                    "control": [Function],
                    "indicatorsContainer": [Function],
                    "input": [Function],
                    "menuList": [Function],
                    "option": [Function],
                    "singleValue": [Function],
                    "valueContainer": [Function],
                  }
                }
              />
            </div>
          </div>
          <input
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </React.Fragment>,
        "checked": false,
        "name": "Attachments",
      },
      Object {
        "body": <CheckboxElement
          checked={false}
          description="Send a message to all destinations known for this contact. If you aren't sure what this means, leave it unchecked."
          labelClassName="checkbox"
          name="All Destinations"
          onChange={[Function]}
          title="All Destinations"
        />,
        "checked": false,
        "name": "Advanced",
      },
    ]
  }
  title="Send Message"
>
  <TypeList
    __className=""
    initialType={
      Object {
        "component": [Function],
        "description": "Send the contact a message",
        "form": [Function],
        "localization": [Function],
        "localizeableKeys": Array [
          "text",
          "quick_replies",
        ],
        "name": "Send Message",
        "type": "send_msg",
      }
    }
    onChange={[MockFunction]}
  />
  <Connect(TextInputElement)
    autocomplete={true}
    count="SMS"
    entry={
      Object {
        "value": "Hey!",
      }
    }
    focus={true}
    name="Message"
    onChange={[Function]}
    onFieldFailures={[Function]}
    showLabel={false}
    textarea={true}
  />
</Dialog>
`;

exports[`SendMsgForm updates should allow switching from router 1`] = `
Array [
  Object {
    "all_urns": false,
    "attachments": Array [],
    "quick_replies": Array [],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "70ac6ea6-803a-4c33-81c7-dc26803c313f",
  },
]
`;

exports[`SendMsgForm updates should save changes 1`] = `
Object {
  "attachments": Array [],
  "message": Object {
    "validationFailures": Array [],
    "value": "What is your favorite color?",
  },
  "quickReplies": Object {
    "validationFailures": Array [],
    "value": Array [
      "red",
      "green",
      "blue",
    ],
  },
  "quickReplyEntry": Object {
    "value": "",
  },
  "sendAll": true,
  "template": Object {
    "value": null,
  },
  "templateVariables": Array [],
  "topic": Object {
    "value": undefined,
  },
  "valid": true,
}
`;

exports[`SendMsgForm updates should save changes 2`] = `
Array [
  Object {
    "all_urns": true,
    "attachments": Array [],
    "quick_replies": Array [
      "red",
      "green",
      "blue",
    ],
    "text": "What is your favorite color?",
    "type": "send_msg",
    "uuid": "b1f332f3-bdd3-4891-aec5-1843a712dbf1",
  },
]
`;
